RESOLVED FIXED46726
Right-clicking on windowless Flash plugin in WebKit2 makes a context menu appear in the bottom-right corner of the screen
https://bugs.webkit.org/show_bug.cgi?id=46726
Summary Right-clicking on windowless Flash plugin in WebKit2 makes a context menu app...
Adam Roben (:aroben)
Reported 2010-09-28 08:13:18 PDT
To reproduce: 1. Go to http://www.worldofwarcraft.com/index.xml 2. Right-click on the animation near the top of the page A context menu for Flash appears in the bottom-right corner of the screen. It should appear where you clicked.
Attachments
Implement NPN_GetValue(NPNVnetscapeWindow) (12.40 KB, patch)
2010-10-01 09:11 PDT, Adam Roben (:aroben)
andersca: review+
Adam Roben (:aroben)
Comment 1 2010-09-28 08:13:47 PDT
Adam Roben (:aroben)
Comment 2 2010-10-01 09:11:29 PDT
Created attachment 69472 [details] Implement NPN_GetValue(NPNVnetscapeWindow)
WebKit Review Bot
Comment 3 2010-10-01 09:12:35 PDT
Attachment 69472 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKitTools/DumpRenderTree/TestNetscapePlugIn/PluginTest.cpp:78: PluginTest::NPN_GetValue is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] WebKitTools/DumpRenderTree/TestNetscapePlugIn/Tests/win/GetValueNetscapeWindow.cpp:26: Found other header before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] WebKitTools/DumpRenderTree/TestNetscapePlugIn/Tests/win/GetValueNetscapeWindow.cpp:28: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 3 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Roben (:aroben)
Comment 4 2010-10-01 09:17:26 PDT
Note You need to log in before you can comment on or make changes to this bug.