Implement NPN_GetValue(NPNVnetscapeWindow)

Fixes <http://webkit.org/b/46726> <rdar://problem/8486319>
Right-clicking on windowless Flash plugin in WebKit2 makes a context
menu appear in the bottom-right corner of the screen

Test: platform/win/plugins/get-value-netscape-window.html

Reviewed by Anders Carlsson.

WebKit2:

* WebProcess/Plugins/Netscape/NetscapeBrowserFuncs.cpp:
(WebKit::NPN_GetValue): Added case for NPNVnetscapeWindow that calls
through to NetscapePlugin::containingWindow.

* WebProcess/Plugins/Netscape/NetscapePlugin.h: Added containingWindow
on Windows.

* WebProcess/Plugins/Netscape/win/NetscapePluginWin.cpp:
(WebKit::NetscapePlugin::containingWindow): Added. Calls through to
the PluginController.
(WebKit::NetscapePlugin::platformPostInitialize): Changed to use
containingWindow.

WebKitTools:

Test NPN_GetValue(NPNVnetscapeWindow)

* DumpRenderTree/TestNetscapePlugIn/PluginTest.cpp:
(PluginTest::NPN_GetValue): Added. Calls through to the browser.

* DumpRenderTree/TestNetscapePlugIn/PluginTest.h: Added NPN_GetValue.

* DumpRenderTree/TestNetscapePlugIn/Tests/win/GetValueNetscapeWindow.cpp: Added.
(GetValueNetscapeWindow::GetValueNetscapeWindow): Initialize members.
(GetValueNetscapeWindow::NPP_SetWindow): Test that
NPN_GetValue(NPNVnetscapeWindow) returns a valid HWND and that it
isn't our HWND.

* DumpRenderTree/TestNetscapePlugIn/win/TestNetscapePlugin.vcproj:
Added GetValueNetscapeWindow.

LayoutTests:

Support for testing NPN_GetValue(NPNVnetscapeWindow)

* platform/win/plugins/get-value-netscape-window-expected.txt: Added.
* platform/win/plugins/get-value-netscape-window.html: Added.

Canonical link: https://commits.webkit.org/59519@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68891 268f45cc-cd09-0410-ab3c-d52691b4dbfc