WebKit2/WebProcess/Plugins/Netscape/NetscapePlugin.h
@@ -55,6 +55,8 @@ public:
 #if PLATFORM(MAC)
     NPError setDrawingModel(NPDrawingModel);
     NPError setEventModel(NPEventModel);
+#elif PLATFORM(WIN)
+    HWND containingWindow() const;
 #endif
 
     void invalidate(const NPRect*);
