WebKit2/WebProcess/Plugins/Netscape/win/NetscapePluginWin.cpp
@@ -54,6 +54,11 @@ static void registerPluginView()
     ::RegisterClassW(&windowClass);
 }
 
+HWND NetscapePlugin::containingWindow() const
+{
+    return m_pluginController->nativeParentWindow();
+}
+
 bool NetscapePlugin::platformPostInitialize()
 {
     if (!m_isWindowed) {
@@ -63,7 +68,7 @@ bool NetscapePlugin::platformPostInitialize()
 
     registerPluginView();
 
-    m_window = ::CreateWindowExW(0, windowClassName, 0, WS_CHILD | WS_VISIBLE, 0, 0, 0, 0, m_pluginController->nativeParentWindow(), 0, 0, 0);
+    m_window = ::CreateWindowExW(0, windowClassName, 0, WS_CHILD | WS_VISIBLE, 0, 0, 0, 0, containingWindow(), 0, 0, 0);
     if (!m_window)
         return false;
 
